--- a/.github/workflows/keep-main-and-pages-synced.yml
+++ b/.github/workflows/keep-main-and-pages-synced.yml
@@ -7,18 +7,20 @@ on:
       - main
 
 jobs:
-  build:
+  sync-branches:
     runs-on: ubuntu-latest
-
+    name: Syncing branches
     steps:
-    - name: Checkout main branch
-      uses: actions/checkout@v2
-      with:
-        ref: main
-        fetch-depth: 0
-
-    - name: Push to gh_pages branch
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: gh_pages
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - name: Opening pull request
+        id: pull
+        uses: tretuna/sync-branches@1.2.0
+        with:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          FROM_BRANCH: 'main'
+          TO_BRANCH: 'gh_pages'
